# Ritualc

./: .gitignore  .proposed_code_changes.txt  README.md  USED_FILES.md  chat.txt  query.txt  requirements.txt  ritualc.sh  ritualc.sh.bu1  test_out.json
Context/: .whispers.txt  conjuration_log.json  ritual_log.json
Scripts/: codex_split.sh  codex_watch.sh  goblin_chat.sh  goblin_ritual_A.sh  goblin_ritual_B.sh  jsonwatch.py.bu  jsonwatch.sh  jsonwatch.sh.bu  jsonwatch.sh.bu2  jsonwatch_render.py  jsonwatch_render.py.bu3  query.tx  wizard_chat.sh  wizard_ritual.sh
Scripts/Jsonwatch_render_rust/: Cargo.toml  jsonwatch_render.rs  main.rs.bu
Scripts/Jsonwatch_render_rust/jsonwatch_render_rust/: main.rs.BU
Scripts/Jsonwatch_render_rust/jsonwatch_render_rust/src/: main.rs
Scripts/Jsonwatch_render_rust/src/: main.rs
Scripts/Trash/: jsonwatch.py  jsonwatch_render.py  jsonwatch_render.py.BU1renders  jsonwatch_render.py.bu0  jsonwatch_renderw.py
Templates/: template_conjuration_log.json  template_ritual_log.json
